Сделал основную разметку и добавил изображения

--- a/index.html
+++ b/index.html
@@ -8,6 +8,151 @@
 
 <body>
 
+  <header class="header container">
+    <nav class="header__nav">
+      <ul class="header__list">
+        <li class="header__item">
+          <a href="" class="header__link">about us</a>
+        </li>
+        <li class="header__item">
+          <a href="" class="header__link--logo">work</a>
+        </li>
+        <li class="header__item">
+          <a href="" class="header__link">
+            <img src="img/logo.png" width="94" height="85" alt="Vintage Bicycles" class="header__img">
+          </a>
+        </li>
+        <li class="header__item">
+          <a href="" class="header__link">shop</a>
+        </li>
+        <li class="header__item">
+          <a href="" class="header__link">contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1 class="visually-hidden">Vintage Bicycle Shop</h1>
+    <section class="our-bikes">
+      <h2 class="our-bikes__heading">A NEW GENERATION OF VINTAGE BIKE</h2>
+      <figure class="our-bikes__item">
+        <figcaption class="our-bikes__caption">
+          <h3 class="our-bikes__title">vintage Oliva</h3>
+          <p class="our-bikes__text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived.
+          </p>
+        </figcaption>
+        <img src="img/oliva.jpg" width="1067" height="600" alt="Vintage Oliva" class="our-bikes__img">
+        <img src="img/oliva-saddle.jpg" width="533" height="200" alt="Vintage Oliva Saddle" class="our-bikes__img">
+      </figure>
+      <figure class="our-bikes__item">
+        <figcaption class="our-bikes__caption">
+          <h3 class="our-bikes__title">La Boriosa</h3>
+          <p class="our-bikes__text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived.
+          </p>
+        </figcaption>
+        <img src="img/boriosa.jpg" width="1067" height="600" alt="Vintage Oliva" class="our-bikes__img">
+        <img src="img/boriosa-saddle.jpg" width="534" height="200" alt="Vintage Oliva Saddle" class="our-bikes__img">
+      </figure>
+      <figure class="our-bikes__item">
+        <figcaption class="our-bikes__caption">
+          <h3 class="our-bikes__title">retrò Bike - M. Hulot</h3>
+          <p class="our-bikes__text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived.
+          </p>
+        </figcaption>
+        <img src="img/hulot-rim.jpg" width="534" height="200" alt="Vintage Oliva" class="our-bikes__img">
+        <img src="img/hulot-logo.jpg" width="533" height="600" alt="Vintage Oliva" class="our-bikes__img">
+        <img src="img/hulot.jpg" width="534" height="600" alt="Vintage Oliva Saddle" class="our-bikes__img">
+      </figure>
+    </section>
+    <article class="tw-comments">
+      <h2 class="visually-hidden">Comments from Twitter</h2>
+      <h3 class="tw-comments__name">AOD New York @aod <span class="tw-comments__name--time">/ 35 min</span></h3>
+      <p class="tw-comments__text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio
+        porttitor, dictum turpis vitae, pretium ante amet.
+      </p>
+      <div class="tw-comments__controls">
+        <button type="button" class="tw-comments__btn">
+          <span class="visually-hidden">First</span>
+        </button>
+        <button type="button" class="tw-comments__btn">
+          <span class="visually-hidden">Second</span>
+        </button>
+        <button type="button" class="tw-comments__btn">
+          <span class="visually-hidden">Third</span>
+        </button>
+      </div>
+    </article>
+    <section class="pop-goods">
+      <h2 class="visually-hidden">Popular goods</h2>
+      <p class="pop-goods__items">
+        <div class="pop-goods__wrap">
+          <img src="img/brooks-sport.jpg" width="267" height="267" alt="Brooks Sport" class="pop-goods__img">
+          <img src="img/all-saddles.jpg" width="267" height="267" alt="All saddles" class="pop-goods__img">
+          <img src="img/brooks-classic.jpg" width="533" height="267" alt="Brooks Sport" class="pop-goods__img">
+        </div>
+        <div class="pop-goods__wrap">
+          <img src="img/bag.jpg" width="267" height="534" alt="Trunk bag" class="pop-goods__img">
+          <img src="img/bike.jpg" width="267" height="534" alt="Bike" class="pop-goods__img">
+        </div>
+        <div class="pop-goods__wrap">
+          <img src="img/interior.jpg" width="533" height="267" alt="Interior" class="pop-goods__img">
+          <img src="img/brooks-wt.jpg" width="267" height="267" alt="Brooks World Travel" class="pop-goods__img">
+          <img src="img/travel-bag.jpg" width="267" height="267" alt="Travel bag" class="pop-goods__img">
+        </div>
+      </p>
+      <a href="" class="pop-goods__link">DISCOVER THE SHOP</a>
+    </section>
+    <section class="subscribe">
+      <a href="" class="subscribe__link"><img src="img/logo.png" width="94" height="85" alt="Vintage Bicycles"
+          class="subscribe__img--logo"></a>
+      <h2 class="subscribe__heading">Stay on the saddle!</h2>
+      <form>
+        <label class="subscribe__label">
+          <span class="visually-hidden">Enter your email</span>
+          <input class="subscribe__input" type="email" name="email" id="email" placeholder="enter your email... ">
+        </label>
+        <button class="subscribe__btn" type="submit">GO</button>
+      </form>
+    </section>
+  </main>
+  <footer class="footer">
+    <address>
+      AOD New York
+      2250 Lexington Avenue
+      New York, NY 10035 - info@domain.com
+    </address>
+    <ul class="footer__list">
+      <li class="footer__item">
+        <a href="" class="footer__link">
+          <span class="visually-hidden">Twitter</span>
+        </a>
+      </li>
+      <li class="footer__item">
+        <a href="" class="footer__link">
+          <span class="visually-hidden">Facebook</span>
+        </a>
+      </li>
+      <li class="footer__item">
+        <a href="" class="footer__link">
+          <span class="visually-hidden">Pinterest</span>
+        </a>
+      </li>
+    </ul>
+  </footer>
+
 </body>
 
 </html>
