--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Vintage Bicycles</title>
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +35,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="container">
     <h1 class="visually-hidden">Vintage Bicycle Shop</h1>
     <section class="our-bikes">
       <h2 class="our-bikes__heading">A NEW GENERATION OF VINTAGE BIKE</h2>
@@ -128,7 +132,7 @@
       </form>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer container">
     <address>
       AOD New York
       2250 Lexington Avenue
