--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           <a href="" class="header__link">about us</a>
         </li>
         <li class="header__item">
-          <a href="" class="header__link--logo">work</a>
+          <a href="" class="header__link">work</a>
         </li>
         <li class="header__item">
-          <a href="" class="header__link">
+          <a href="" class="header__link header__link--logo">
             <img src="img/logo.png" width="94" height="85" alt="Vintage Bicycles" class="header__img">
           </a>
         </li>
