--- a/index.html
+++ b/index.html
@@ -37,47 +37,59 @@
   </header>
   <main class="container">
     <h1 class="visually-hidden">Vintage Bicycle Shop</h1>
-    <section class="our-bikes">
-      <h2 class="our-bikes__heading">A NEW GENERATION OF VINTAGE BIKE</h2>
-      <figure class="our-bikes__item">
-        <figcaption class="our-bikes__caption">
-          <h3 class="our-bikes__title">vintage Oliva</h3>
-          <p class="our-bikes__text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived.
-          </p>
-        </figcaption>
-        <img src="img/oliva.jpg" width="1067" height="600" alt="Vintage Oliva" class="our-bikes__img">
-        <img src="img/oliva-saddle.jpg" width="533" height="200" alt="Vintage Oliva Saddle" class="our-bikes__img">
+    <section class="gallery">
+      <h2 class="gallery__heading">A NEW GENERATION OF VINTAGE BIKE</h2>
+      <p class="gallery__text">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged.
+      </p>
+      <figure class="gallery__item">
+        <div class="gallery__fig-wrap--oliva">
+          <figcaption class="gallery__caption">
+            <h3 class="gallery__title gallery__title--oliva">vintage Oliva</h3>
+            <p class="gallery__text--figure">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+              make a type specimen book. It has survived.
+            </p>
+          </figcaption>
+          <img class="gallery__img" src="img/oliva-saddle.jpg" width="533" height="200" alt="Vintage Oliva Saddle">
+        </div>
+        <img class="gallery__img" src="img/oliva.jpg" width="1067" height="600" alt="Vintage Oliva">
       </figure>
-      <figure class="our-bikes__item">
-        <figcaption class="our-bikes__caption">
-          <h3 class="our-bikes__title">La Boriosa</h3>
-          <p class="our-bikes__text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived.
-          </p>
-        </figcaption>
-        <img src="img/boriosa.jpg" width="1067" height="600" alt="Vintage Oliva" class="our-bikes__img">
-        <img src="img/boriosa-saddle.jpg" width="534" height="200" alt="Vintage Oliva Saddle" class="our-bikes__img">
+      <figure class="gallery__item">
+        <div class="gallery__fig-wrap--boriosa">
+          <figcaption class="gallery__caption">
+            <h3 class="gallery__title gallery__title--boriosa">La Boriosa</h3>
+            <p class="gallery__text--figure">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+              make a type specimen book. It has survived.
+            </p>
+          </figcaption>
+          <img class="gallery__img" src="img/boriosa-saddle.jpg" width="534" height="200" alt="Vintage Oliva Saddle">
+        </div>
+        <img class="gallery__img" src="img/boriosa.jpg" width="1067" height="600" alt="Vintage Oliva">
       </figure>
-      <figure class="our-bikes__item">
-        <figcaption class="our-bikes__caption">
-          <h3 class="our-bikes__title">retrò Bike - M. Hulot</h3>
-          <p class="our-bikes__text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived.
-          </p>
-        </figcaption>
-        <img src="img/hulot-rim.jpg" width="534" height="200" alt="Vintage Oliva" class="our-bikes__img">
-        <img src="img/hulot-logo.jpg" width="533" height="600" alt="Vintage Oliva" class="our-bikes__img">
-        <img src="img/hulot.jpg" width="534" height="600" alt="Vintage Oliva Saddle" class="our-bikes__img">
+      <figure class="gallery__item">
+        <div class="gallery__fig-wrap--hulot">
+          <figcaption class="gallery__caption">
+            <h3 class="gallery__title gallery__title--hulot">retrò Bike - M. Hulot</h3>
+            <p class="gallery__text--figure">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+              make a type specimen book. It has survived.
+            </p>
+          </figcaption>
+          <img class="gallery__img" src="img/hulot-rim.jpg" width="534" height="200" alt="Vintage Oliva">
+        </div>
+        <img class="gallery__img gallery__img--hulot-logo" src="img/hulot-logo.jpg" width="533" height="600" alt="Vintage Oliva">
+        <img class="gallery__img gallery__img--hulot-bike" src="img/hulot.jpg" width="534" height="600" alt="Vintage Oliva Saddle">
       </figure>
     </section>
     <article class="tw-comments">
@@ -90,12 +102,15 @@
       <div class="tw-comments__controls">
         <button type="button" class="tw-comments__btn">
           <span class="visually-hidden">First</span>
+          <span class="tw-comments__bullet tw-comments__bullet--current"></span>
         </button>
         <button type="button" class="tw-comments__btn">
           <span class="visually-hidden">Second</span>
+          <span class="tw-comments__bullet"></span>
         </button>
         <button type="button" class="tw-comments__btn">
           <span class="visually-hidden">Third</span>
+          <span class="tw-comments__bullet"></span>
         </button>
       </div>
     </article>
