--- a/index.html
+++ b/index.html
@@ -46,50 +46,55 @@
         remaining essentially unchanged.
       </p>
       <figure class="gallery__item">
-        <div class="gallery__fig-wrap--oliva">
-          <figcaption class="gallery__caption">
+        <figcaption class="gallery__caption gallery__caption--oliva">
+          <div class="gallery__wrapper">
             <h3 class="gallery__title gallery__title--oliva">vintage Oliva</h3>
             <p class="gallery__text--figure">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
               industry's
-              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+              to
               make a type specimen book. It has survived.
             </p>
-          </figcaption>
+          </div>
           <img class="gallery__img" src="img/oliva-saddle.jpg" width="533" height="200" alt="Vintage Oliva Saddle">
-        </div>
+        </figcaption>
         <img class="gallery__img" src="img/oliva.jpg" width="1067" height="600" alt="Vintage Oliva">
       </figure>
       <figure class="gallery__item">
-        <div class="gallery__fig-wrap--boriosa">
-          <figcaption class="gallery__caption">
+        <figcaption class="gallery__caption gallery__caption--boriosa">
+          <div class="gallery__wrapper">
             <h3 class="gallery__title gallery__title--boriosa">La Boriosa</h3>
             <p class="gallery__text--figure">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
               industry's
-              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+              to
               make a type specimen book. It has survived.
             </p>
-          </figcaption>
+          </div>
           <img class="gallery__img" src="img/boriosa-saddle.jpg" width="534" height="200" alt="Vintage Oliva Saddle">
-        </div>
+        </figcaption>
         <img class="gallery__img" src="img/boriosa.jpg" width="1067" height="600" alt="Vintage Oliva">
       </figure>
       <figure class="gallery__item">
-        <div class="gallery__fig-wrap--hulot">
-          <figcaption class="gallery__caption">
+        <figcaption class="gallery__caption gallery__caption--hulot">
+          <div class="gallery__wrapper">
             <h3 class="gallery__title gallery__title--hulot">retrò Bike - M. Hulot</h3>
             <p class="gallery__text--figure">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
               industry's
-              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+              to
               make a type specimen book. It has survived.
             </p>
-          </figcaption>
+          </div>
           <img class="gallery__img" src="img/hulot-rim.jpg" width="534" height="200" alt="Vintage Oliva">
-        </div>
-        <img class="gallery__img gallery__img--hulot-logo" src="img/hulot-logo.jpg" width="533" height="600" alt="Vintage Oliva">
-        <img class="gallery__img gallery__img--hulot-bike" src="img/hulot.jpg" width="534" height="600" alt="Vintage Oliva Saddle">
+        </figcaption>
+        <img class="gallery__img gallery__img--hulot-logo" src="img/hulot-logo.jpg" width="533" height="600"
+          alt="Vintage Oliva">
+        <img class="gallery__img gallery__img--hulot-bike" src="img/hulot.jpg" width="534" height="600"
+          alt="Vintage Oliva Saddle">
       </figure>
     </section>
     <article class="tw-comments">
@@ -116,21 +121,19 @@
     </article>
     <section class="pop-goods">
       <h2 class="visually-hidden">Popular goods</h2>
-      <p class="pop-goods__items">
-        <div class="pop-goods__wrap">
-          <img src="img/brooks-sport.jpg" width="267" height="267" alt="Brooks Sport" class="pop-goods__img">
-          <img src="img/all-saddles.jpg" width="267" height="267" alt="All saddles" class="pop-goods__img">
-          <img src="img/brooks-classic.jpg" width="533" height="267" alt="Brooks Sport" class="pop-goods__img">
-        </div>
-        <div class="pop-goods__wrap">
-          <img src="img/bag.jpg" width="267" height="534" alt="Trunk bag" class="pop-goods__img">
-          <img src="img/bike.jpg" width="267" height="534" alt="Bike" class="pop-goods__img">
-        </div>
-        <div class="pop-goods__wrap">
-          <img src="img/interior.jpg" width="533" height="267" alt="Interior" class="pop-goods__img">
-          <img src="img/brooks-wt.jpg" width="267" height="267" alt="Brooks World Travel" class="pop-goods__img">
-          <img src="img/travel-bag.jpg" width="267" height="267" alt="Travel bag" class="pop-goods__img">
-        </div>
+      <p class="pop-goods__wrap">
+        <img src="img/brooks-sport.jpg" width="267" height="267" alt="Brooks Sport" class="pop-goods__img">
+        <img src="img/all-saddles.jpg" width="267" height="267" alt="All saddles" class="pop-goods__img">
+        <img src="img/brooks-classic.jpg" width="533" height="267" alt="Brooks Sport" class="pop-goods__img">
+      </p>
+      <p class="pop-goods__wrap">
+        <img src="img/bag.jpg" width="267" height="534" alt="Trunk bag" class="pop-goods__img">
+        <img src="img/bike.jpg" width="267" height="534" alt="Bike" class="pop-goods__img">
+      </p>
+      <p class="pop-goods__wrap">
+        <img src="img/interior.jpg" width="533" height="267" alt="Interior" class="pop-goods__img">
+        <img src="img/brooks-wt.jpg" width="267" height="267" alt="Brooks World Travel" class="pop-goods__img">
+        <img src="img/travel-bag.jpg" width="267" height="267" alt="Travel bag" class="pop-goods__img">
       </p>
       <a href="" class="pop-goods__link">DISCOVER THE SHOP</a>
     </section>
