--- a/index.html
+++ b/index.html
@@ -121,27 +121,50 @@
     </article>
     <section class="pop-goods">
       <h2 class="visually-hidden">Popular goods</h2>
-      <p class="pop-goods__wrap">
-        <img src="img/brooks-sport.jpg" width="267" height="267" alt="Brooks Sport" class="pop-goods__img">
-        <img src="img/all-saddles.jpg" width="267" height="267" alt="All saddles" class="pop-goods__img">
-        <img src="img/brooks-classic.jpg" width="533" height="267" alt="Brooks Sport" class="pop-goods__img">
-      </p>
-      <p class="pop-goods__wrap">
-        <img src="img/bag.jpg" width="267" height="534" alt="Trunk bag" class="pop-goods__img">
-        <img src="img/bike.jpg" width="267" height="534" alt="Bike" class="pop-goods__img">
-      </p>
-      <p class="pop-goods__wrap">
-        <img src="img/interior.jpg" width="533" height="267" alt="Interior" class="pop-goods__img">
-        <img src="img/brooks-wt.jpg" width="267" height="267" alt="Brooks World Travel" class="pop-goods__img">
-        <img src="img/travel-bag.jpg" width="267" height="267" alt="Travel bag" class="pop-goods__img">
-      </p>
-      <a href="" class="pop-goods__link">DISCOVER THE SHOP</a>
+      <div class="pop-goods__items">
+        <p class="pop-goods__wrap--row">
+          <span class="pop-goods__wrap--cell">
+            <a class="pop-goods__link" href="">
+              <img src="img/brooks-sport.jpg" width="266" height="267" alt="Brooks Sport" class="pop-goods__img">
+            </a>
+            <a class="pop-goods__link" href="">
+              <img src="img/all-saddles.jpg" width="267" height="267" alt="All saddles" class="pop-goods__img">
+            </a>
+          </span>
+          <a class="pop-goods__link" href="">
+            <img src="img/brooks-classic.jpg" width="533" height="267" alt="Brooks Sport" class="pop-goods__img">
+          </a>
+        </p>
+        <p class="pop-goods__wrap--cell">
+          <a class="pop-goods__link" href="">
+            <img src="img/bag.jpg" width="267" height="534" alt="Trunk bag" class="pop-goods__img">
+          </a>
+          <a class="pop-goods__link" href="">
+            <img src="img/bike.jpg" width="267" height="534" alt="Bike" class="pop-goods__img">
+          </a>
+        </p>
+        <p class="pop-goods__wrap--row">
+          <a class="pop-goods__link" href="">
+            <img src="img/interior.jpg" width="533" height="267" alt="Interior" class="pop-goods__img">
+          </a>
+          <span class="pop-goods__wrap--cell">
+            <a class="pop-goods__link" href="">
+              <img src="img/brooks-wt.jpg" width="266" height="267" alt="Brooks World Travel" class="pop-goods__img">
+            </a>
+            <a class="pop-goods__link" href="">
+              <img src="img/travel-bag.jpg" width="267" height="267" alt="Travel bag" class="pop-goods__img">
+            </a>
+          </span>
+        </p>
+      </div>
+      <a href="" class="pop-goods__link--main">DISCOVER THE SHOP</a>
     </section>
     <section class="subscribe">
-      <a href="" class="subscribe__link"><img src="img/logo.png" width="94" height="85" alt="Vintage Bicycles"
-          class="subscribe__img--logo"></a>
+      <a class="subscribe__link" href="">
+        <img class="subscribe__img--logo" src="img/logo.png" width="94" height="85" alt="Vintage Bicycles">
+      </a>
       <h2 class="subscribe__heading">Stay on the saddle!</h2>
-      <form>
+      <form class="subscribe__form">
         <label class="subscribe__label">
           <span class="visually-hidden">Enter your email</span>
           <input class="subscribe__input" type="email" name="email" id="email" placeholder="enter your email... ">
@@ -150,29 +173,31 @@
       </form>
     </section>
   </main>
-  <footer class="footer container">
-    <address>
-      AOD New York
-      2250 Lexington Avenue
-      New York, NY 10035 - info@domain.com
-    </address>
-    <ul class="footer__list">
-      <li class="footer__item">
-        <a href="" class="footer__link">
-          <span class="visually-hidden">Twitter</span>
-        </a>
-      </li>
-      <li class="footer__item">
-        <a href="" class="footer__link">
-          <span class="visually-hidden">Facebook</span>
-        </a>
-      </li>
-      <li class="footer__item">
-        <a href="" class="footer__link">
-          <span class="visually-hidden">Pinterest</span>
-        </a>
-      </li>
-    </ul>
+  <footer class="footer">
+    <div class="footer__wrapper container">
+      <address class="footer__address">
+        <span class="footer__city">AOD New York</span><br>
+        2250 Lexington Avenue<br>
+        New York, NY 10035 - info@domain.com
+      </address>
+      <ul class="footer__list">
+        <li class="footer__item footer__item--tw">
+          <a href="" class="footer__link">
+            <span class="visually-hidden">Twitter</span>
+          </a>
+        </li>
+        <li class="footer__item footer__item--fb">
+          <a href="" class="footer__link">
+            <span class="visually-hidden">Facebook</span>
+          </a>
+        </li>
+        <li class="footer__item footer__item--pr">
+          <a href="" class="footer__link">
+            <span class="visually-hidden">Pinterest</span>
+          </a>
+        </li>
+      </ul>
+    </div>
   </footer>
 
 </body>
